Refactor testing according to current conventions

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,13 @@
-Gemfile.lock
-log
-pkg
-travis.log
-.vagrant
-spec/fixtures/*
-junit
-.bundle/
-vendor/
+.*.sw?
+/pkg
+/spec/fixtures/manifests
+/spec/fixtures/modules
+/.rspec_system
+/.vagrant
+/.bundle
+/vendor
+/Gemfile.lock
+/junit
+/log
+.yardoc
+coverage
