--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -1,5 +1,6 @@
 fixtures:
   forge_modules:
-    stdlib: 'puppetlabs/stdlib'
+    stdlib: "puppetlabs/stdlib"
+    apt: "puppetlabs/apt"
   symlinks:
     telegraf: "#{source_dir}"
